DFR-464: Fortify setup (#507)
* DFR-464: Fortify setup