@@ -66,7 +66,7 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://repo.spring.io/libs-milestone' }
-    maven { url "https://dl.bintray.com/hmcts/hmcts-maven" }
+    maven { url "https://jitpack.io" }
 }
 
 distributions {
@@ -157,6 +157,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok:${versions.lombok}")
 
     testCompileOnly("org.projectlombok:lombok:${versions.lombok}")
+    testCompile('com.github.hmcts:fortify-client:1.2.0:all')
     annotationProcessor("org.projectlombok:lombok:${versions.lombok}")
     testAnnotationProcessor("org.projectlombok:lombok:${versions.lombok}")
     integrationTestImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -492,3 +493,11 @@ pact {
         version = project.pacticipantVersion
     }
 }
+
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
